vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__entity_declaration__tests__parse_entity_with_statements.snap
---
source: vhdl_syntax/src/parser/productions/entity_declaration.rs
expression: "to_test_text(Parser::entity_declaration,\n\"\\\nentity myent is\nbegin\n  check(clk, valid);\nend entity;\",)"
---
EntityDeclaration
  EntityDeclarationPreamble
    Keyword(Entity)
    Identifier 'myent'
    Keyword(Is)
  EntityStatementPart
    DeclarationStatementSeparator
      Keyword(Begin)
    ConcurrentProcedureCallOrComponentInstantiationStatement
      Name
        NameDesignatorPrefix
          Identifier 'check'
        ParenthesizedName
          LeftPar
          AssociationList
            AssociationElement
              ActualPart
                ActualPartExpression
                  NameExpression
                    Name
                      NameDesignatorPrefix
                        Identifier 'clk'
            Comma
            AssociationElement
              ActualPart
                ActualPartExpression
                  NameExpression
                    Name
                      NameDesignatorPrefix
                        Identifier 'valid'
          RightPar
      SemiColon
  EntityDeclarationEpilogue
    Keyword(End)
    Keyword(Entity)
    SemiColon
